--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,13 @@
 
 .top-section{
     display: flex;
+    flex-wrap: wrap;
     justify-content:center; 
     background-color: #2D25A0;
     
 }
 #head-color{
+  font-size: 42px;
     color: white;
     font-family:'Poppins' sans-serif;
     font-weight: 700;
@@ -68,4 +70,32 @@
     
   }
  
-  
+  .main-body{
+    display: flex;
+    flex-wrap: wrap;
+    
+    justify-content: center;
+    background-color: lightgrey ;
+  }
+
+  .player-box{
+    box-sizing: content-box;
+    background-color: white;
+    width: 330px;
+    height: 474px;
+    padding-left: 15px;
+    padding: 15px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+   justify-content: center;
+
+  }
+
+  .player-details{
+height: 104px;
+width: 300px;
+font-family: 'Poppins';
+font-style: normal;
+color: #6C6C6C;
+font-weight: 200
+;
+  }
